update name and contact

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,22 +6,24 @@
 
 main:
   - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
+    #url: /publications/
+    url: https://scholar.google.com/citations?user=_V9BVQEAAAAJ&hl=en
     
   - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
+    url: https://github.com/YupengChen1137
+    #url: /portfolio/
+
   - title: "CV"
-    url: /cv/
+    url: /files/YupengChen_CV_share.pdf
+        
+#  - title: "Blog Posts"
+#    url: /year-archive/
     
-  - title: "Guide"
-    url: /markdown/
+#  - title: "Guide"
+#    url: /markdown/
+
+#  - title: "Talks"
+#   url: /talks/    
+
+#  - title: "Teaching"
+#    url: /teaching/    
