Revert "Update _config.yml"
This reverts commit a9523f87445366a646f2e5b58571fb9f398dc61d.

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Yupeng's Homepage"
 title_separator          : "-"
 name                     : &name "Yupeng Chen"
 description              : &description "personal description"
-url                      : https://YupengChen1137.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://yupeng-chen.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "YupengChen1137/yupeng-chen.github.io"
 
