--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,24 +6,22 @@
 
 main:
   - title: "Publications"
-    #url: /publications/
-    url: https://scholar.google.com/citations?user=_V9BVQEAAAAJ&hl=en
+    url: /publications/
+
+  - title: "Talks"
+    url: /talks/    
+
+  - title: "Teaching"
+    url: /teaching/    
     
   - title: "Portfolio"
-    url: https://github.com/YupengChen1137
-    #url: /portfolio/
-
-  - title: "CV"
-    url: /files/YupengChen_CV_share.pdf
+    url: /portfolio/
         
-#  - title: "Blog Posts"
-#    url: /year-archive/
+  - title: "Blog Posts"
+    url: /year-archive/
     
-#  - title: "Guide"
-#    url: /markdown/
-
-#  - title: "Talks"
-#   url: /talks/    
-
-#  - title: "Teaching"
-#    url: /teaching/    
+  - title: "CV"
+    url: /cv/
+    
+  - title: "Guide"
+    url: /markdown/
