--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "Yupeng's Homepage"
 title_separator          : "-"
 name                     : &name "Yupeng Chen"
 description              : &description "personal description"
-url                      : https://YupengChen1137.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://yupeng-l-chen.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "YupengChen1137/yupeng-chen.github.io"
+repository               : "yupeng-l-chen/yupeng-l-chen.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
