--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,9 +5,9 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "Publications"
+  - title: "Research"
     # url: https://scholar.google.com/citations?user=_V9BVQEAAAAJ&hl=en
-    url: /publications/
+    url: /research/
 
   - title: "CV"
     url: /files/yupeng_chen_cv.pdf
