update research page

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile_photo.jpg"
   name             : "Yupeng Chen"
   pronouns         : # example: "she/her"  
-  bio              : "PhD Student in Management Science & Engineering"
+  bio              : "PhD Student @ Stanford MS&E"
   location         : "Palo Alto, CA"
   employer         : "Stanford University"
   uri              : # URL
